<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.test.mytest</groupId>
	<artifactId>mytest</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>mytest</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jdk.version>1.8</jdk.version>
		<serenity.version>1.1.4</serenity.version>
		<serenity.cucumber.version>1.1.1</serenity.cucumber.version>
		<webdriver.driver>chrome</webdriver.driver>
		<slf4j.version>1.6.1</slf4j.version>
		<junit.version>4.13.1</junit.version>
		<bdd.environment>LOC</bdd.environment>
	</properties>

	<dependencies>
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-core</artifactId>
			<version>${serenity.version}</version>
		</dependency>
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-junit</artifactId>
			<version>${serenity.version}</version>
		</dependency>
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-cucumber</artifactId>
			<version>${serenity.cucumber.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- Allow Java 8 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<debug>true</debug>
				</configuration>
			</plugin>

			<!-- Don't run any tests during the unit test phase -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>

			<!-- Run all tests during the integration test phase -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.18</version>
				<configuration>
					<includes>
						<include>**/*Test.java</include>
						<include>**/*Tests.java</include>
					</includes>
					<reuseForks>true</reuseForks>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m
						-Dcurrent_env=${bdd.environment}</argLine>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Generate the test reports after the integration tests -->
			<plugin>
				<groupId>net.serenity-bdd.maven.plugins</groupId>
				<artifactId>serenity-maven-plugin</artifactId>
				<version>${serenity.cucumber.version}</version>
				<executions>
					<execution>
						<id>serenity-reports</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>aggregate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

	<profiles>
		<profile>
			<id>maven2</id>
			<activation>
				<file>
					<missing>${basedir}</missing>
				</file>
			</activation>
			<reporting>
				<plugins>
					<plugin>
						<groupId>net.serenity-bdd.maven.plugins</groupId>
						<artifactId>serenity-maven-plugin</artifactId>
						<version>${serenity.version}</version>
					</plugin>
				</plugins>
			</reporting>
		</profile>
		<profile>
			<id>maven3</id>
			<activation>
				<file>
					<exists>${basedir}</exists>
				</file>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-site-plugin</artifactId>
						<version>3.2</version>
						<configuration>
							<reportPlugins>
								<plugin>
									<groupId>net.serenity-bdd.maven.plugins</groupId>
									<artifactId>serenity-maven-plugin</artifactId>
									<version>${serenity.version}</version>
								</plugin>
							</reportPlugins>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>



		<profile>
			<id>NON_local_failsafe</id>
			<activation>
				<property>
					<name>current_env</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>2.18</version>
						<configuration>
							<includes>
								<include>**/*Test.java</include>
								<include>**/*Tests.java</include>
							</includes>
							<reuseForks>true</reuseForks>
							<argLine>-Xmx1024m -XX:MaxPermSize=256m
								-Dcurrent_env=${bdd.environment}</argLine>
							<systemProperties>
								<!--<webdriver.driver>phantomjs</webdriver.driver>  -->
								<surefire.rerunFailingTestsCount>2</surefire.rerunFailingTestsCount>
							</systemProperties>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>integration-test</goal>
									<goal>verify</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
